log/build_2021-10-23_08-09-45/publisher3431/stderr.log
  File "/home/rsa2021/py_pub_sub/install/publisher3431/lib/python3.8/site-packages/publisher3431/subscriber_ass2.py", line 84
    if (i*0.01749303564429283 > (3*math.pi)/2)
                                             ^
SyntaxError: invalid syntax

